# temp-because-clion-is-shit

./: CMakeLists.txt  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: fast_lanes_extension.cpp  read_fast_lanes.cpp
src/include/: fast_lanes_extension.hpp  read_fast_lanes.hpp
